# myFilterLibTest

./: CMakeLists.txt  testFilter.cpp  Описание тестов.txt
files/: sinus10k.txt  sinus3k.txt  sinus3k10k.txt  sinus7_5k.txt
myFilterLib/: CMakeLists.txt  myfilter.cpp  myfilter.h
